fix: adjust gap between reviewDetailWrap and approveButton

--- a/client/src/components/admin/ReviewsManagement/ReviewsList/ReviewCard/index.module.scss
+++ b/client/src/components/admin/ReviewsManagement/ReviewsList/ReviewCard/index.module.scss
@@ -141,6 +141,14 @@
       }
     }
 
+    .reviewDetailWrap {
+      width: 336px;
+
+      p {
+        width: fit-content;
+      }
+    }
+
     .approveButtonsWrap {
       justify-content: end;
       gap: 32px;
